# gotoeventsbot

./: docker-compose.yml
bot/: pyproject.toml
miner/: pyproject.toml
miner/assets/: cities.pkl
miner/miner/: __init__.py  custom_types.py  exceptions.py  helpers.py  scheduler.py  tasks.py
miner/miner/sources/: hackathon_rus_events.py  illusion_events.py  sber_events.py  sk_events.py  tinkoff_events.py  vk_cloud_events.py  vk_events.py  yandex_events.py
