[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Telegram Bot Service for GoToEventsBot"
authors = ["Ilya Chesalin <ilya.chesalin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
