[tool.poetry]
name = "miner"
version = "0.1.0"
description = "Data Miner Service for GoToEventsBot"
authors = ["Ilya Chesalin <ilya.chesalin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.4.0"
beautifulsoup4 = "^4.12.3"
httpx = "^0.26.0"
sqlalchemy = "^2.0.25"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
